--- a/build.gradle
+++ b/build.gradle
@@ -7,34 +7,57 @@
  */
 
 plugins {
-    // Apply the groovy plugin to add support for Groovy
-    id 'groovy'
+	// Apply the groovy plugin to add support for Groovy
+	id 'groovy'
 
-    // Apply the application plugin to add support for building a CLI application.
-    id 'application'
+	// Apply the application plugin to add support for building a CLI application.
+	id 'application'
+
+	// spotless formatting
+	id 'com.diffplug.spotless' version '5.0.0'
 }
 
 repositories {
-    // Use jcenter for resolving dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+	// Use jcenter for resolving dependencies.
+	// You can declare any Maven/Ivy/file repository here.
+	jcenter()
 }
 
 dependencies {
-    // Use the latest Groovy version for building this library
-    implementation 'org.codehaus.groovy:groovy-all:3.0.5'
+	// Use the latest Groovy version for building this library
+	implementation 'org.codehaus.groovy:groovy-all:3.0.5'
 
-    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.8.6'
+	implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.8.6'
 
-    implementation 'io.github.cdimascio:java-dotenv:5.2.1'
-// https://mvnrepository.com/artifact/com.sun.mail/javax.mail
-    implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
+	implementation 'io.github.cdimascio:java-dotenv:5.2.1'
+	// https://mvnrepository.com/artifact/com.sun.mail/javax.mail
+	implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
 
+	testImplementation 'org.spockframework:spock-core:2.0-M3-groovy-3.0'
+}
 
-    testImplementation 'org.spockframework:spock-core:2.0-M3-groovy-3.0'
+test {
+	useJUnitPlatform()
 }
 
 application {
-    // Define the main class for the application.
-    mainClassName = 'org.ethelred.temperature_monitor2.App'
+	// Define the main class for the application.
+	mainClassName = 'org.ethelred.temperature_monitor2.App'
+}
+
+task installGitHooks(type:Exec) {
+	commandLine "hooks/setup.sh"
+}
+compileJava.dependsOn installGitHooks
+
+spotless {
+	groovy {
+		importOrder()
+
+		greclipse()
+		licenseHeader '/* (C) $YEAR Edward Harman */'
+	}
+	groovyGradle {
+		greclipse()
+	}
 }
