--- a/build.gradle
+++ b/build.gradle
@@ -52,9 +52,9 @@ compileJava.dependsOn installGitHooks
 
 spotless {
 	groovy {
-		importOrder()
+		importOrderFile('spotless.importorder')
 
-		greclipse()
+		greclipse('4.13.0').configFile('spotless.eclipse.xml', 'org.codehaus.groovy.eclipse.ui.prefs')
 		licenseHeader '/* (C) $YEAR Edward Harman */'
 	}
 	groovyGradle {
